Reconnecting web socket; adjusted protocol for linebreaks

--- a/rotelClient.html
+++ b/rotelClient.html
@@ -4,6 +4,7 @@
  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> 
  <script src="rotelClient.js"></script> 
+ <script src="reconnectingWebsocket.js"></script> 
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 <div data-role="fieldcontain">
 <label for="power-flipswitch">Power:</label>
 <select id="power-flipswitch" data-role="flipswitch">
-<option value="standby">Standby</option>
+<option value="standby">Off</option>
 <option value="on">On</option>
 </select>
 </div>
