Display parsing almost done

--- a/rotelClient.html
+++ b/rotelClient.html
@@ -9,6 +9,9 @@
 
 <body>
 
+<div id="lcd-display" style="font-family:monospace;white-space:pre;">
+</div>
+
 <fieldset>
 <div data-role="fieldcontain">
 <label for="power-flipswitch">Power:</label>
