--- a/rotelClient.html
+++ b/rotelClient.html
@@ -82,16 +82,16 @@ input, label {
 
 <label for="source" class="select">Source:</label>
 <select name="source" id="source">
-<option value="aux1">Aux 1</option>
-<option value="aux2">Aux 2</option>
-<option value="coax1">Coax 1</option>
-<option value="coax2">Coax 2</option>
-<option value="opt1">Optical 1</option>
-<option value="opt2">Optical 2</option>
-<option value="tuner">Tuner</option>
-<option value="phono">Phono</option>
-<option value="cd">CD</option>
-<option value="usb">USB</option>
+<option id="aux1" value="aux1">Aux 1</option>
+<option id="aux2" value="aux2">Aux 2</option>
+<option id="coax1" value="coax1">Coax 1</option>
+<option id="coax2" value="coax2">Coax 2</option>
+<option id="opt1" value="opt1">Optical 1</option>
+<option id="opt2" value="opt2">Optical 2</option>
+<option id="tuner" value="tuner">Tuner</option>
+<option id="phono" value="phono">Phono</option>
+<option id="cd" value="cd">CD</option>
+<option id="usb" value="usb">USB</option>
 </select></label> 
 
 
