--- a/rotelClient.html
+++ b/rotelClient.html
@@ -4,6 +4,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> 
  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> 
+ <script src="rotelConfig.js"></script> 
  <script src="rotelClient.js"></script> 
  <script src="reconnectingWebsocket.js"></script> 
 
@@ -82,16 +83,16 @@ input, label {
 
 <label for="source" class="select">Source:</label>
 <select name="source" id="source">
-<option id="aux1" value="aux1">Aux 1</option>
-<option id="aux2" value="aux2">Aux 2</option>
-<option id="coax1" value="coax1">Coax 1</option>
-<option id="coax2" value="coax2">Coax 2</option>
-<option id="opt1" value="opt1">Optical 1</option>
-<option id="opt2" value="opt2">Optical 2</option>
-<option id="tuner" value="tuner">Tuner</option>
-<option id="phono" value="phono">Phono</option>
-<option id="cd" value="cd">CD</option>
-<option id="usb" value="usb">USB</option>
+<option id="aux1" value="aux1"></option>
+<option id="aux2" value="aux2"></option>
+<option id="coax1" value="coax1"></option>
+<option id="coax2" value="coax2"></option>
+<option id="opt1" value="opt1"></option>
+<option id="opt2" value="opt2"></option>
+<option id="tuner" value="tuner"></option>
+<option id="phono" value="phono"></option>
+<option id="cd" value="cd"></option>
+<option id="usb" value="usb"></option>
 </select></label> 
 
 
